2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-save.pk: Do not capitalize summary in help entry.
	* poke/pk-extract.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-attrs.def: Remove PKL_AST_ATTR_ALIGNMENT.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_attr): Do not handle the
	'alignment attribute.
	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Likewise.
	* testsuite/poke.repl/repl.exp: Update tests.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Emit
	compilation-time errors for some attributes.
	* testsuite/poke.pkl/attr-offset-diag-4.pk: New test.
	* testsuite/poke.pkl/attr-ename-diag-1.pk: Likewise.
	* testsuite/poke.pkl/attr-esize-diag-1.pk: Likewise.
	* testsuite/poke.pkl/attr-eoffset-diag-1.pk: Likewise.
	* testsuite/poke.pkl/attr-ename-arr-5.pk: Remove test.
	* testsuite/poke.pkl/attr-esize-5.pk: Likewise.
	* testsuite/poke.pkl/attr-eoffset-5.pk: Likewise.

2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Integer Attributes): Update accordingly.
	(Offset Attributes): Likewise.

	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Allow using 'length
	in any kind of value.
	* testsuite/poke.pkl/attr-length-12.pk: New test.
	* testsuite/poke.pkl/attr-length-13.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen-attrs.pks (attr_elem): Raise E_elem if the
	referred element is an absent field.
	* testsuite/poke.pkl/attr-elem-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen-attrs.pks (attr_ename): Do not print . before [
	in array element names.
	(attr_esize): Support absent fields in structs.
	* testsuite/poke.pkl/attr-esize-6.pk: New test.
	* testsuite/poke.pkl/attr-esize-7.pk: Likewise.